[package]
name = "tOS"
version = "0.1.0"
edition = "2024"

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[dependencies]
linked_list_allocator = "0.9.0"
bootloader = { version = "0.9", features = ["map_physical_memory"] }
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.7.0"
num_enum = { version = "0.7.6", default-features = false }

[dependencies.crossbeam-queue]
version = "0.3.11"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.2.0"
default-features = false

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]

[[bin]]
name = "tOS"
test = true
bench = false


[package.metadata.bootimage]
test-args = [
	"-device",
	"isa-debug-exit,iobase=0xf4,iosize=0x04",
	"-serial",
	"stdio",
	"-display",
	"none",
]
run-args = [
	"-netdev",
	# "tap,id=net0,ifname=tap0,script=no,downscript=no",
	"user,id=net0",
	"-device",
	"e1000,netdev=net0",
	"-serial",
	"stdio",
]
test-success-exit-code = 33 # (0x10 << 1) | 1
