[workspace]
resolver = "3"
members = ["kernel"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package]
name = "tos"
version = "0.1.0"
edition = "2024"

[dependencies]
ovmf-prebuilt = "0.2.4"

[build-dependencies]
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }
bootloader = "0.11.12"
