[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
linked_list_allocator = "0.9.0"
bootloader_api = "0.11"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.15.2"
uart_16550 = "0.2.0"
pic8259 = "0.11"
pc-keyboard = "0.7.0"
num_enum = { version = "0.7.6", default-features = false }
bitflags = { version = "2.11.0", default-features = false }
log = "0.4.17"
seq-macro = "0.3.6"

[dependencies.crossbeam-queue]
version = "0.3.11"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.2.0"
default-features = false

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]

[dependencies.noto-sans-mono-bitmap]
version = "0.2.0"
default-features = false
features = ["regular", "size_16", "unicode-basic-latin", "unicode-specials"]
